# aspace

./: .clang-format  .gitignore  CMakeLists.txt  README.md  post_install.cmake  test-coverage.sh
.cache/clangd/index/: echoeditor.cpp.6B8F1C2A92C0605B.idx  main.cpp.86C3F6FBF613D5C2.idx  main.cpp.93D9435939A8BC1B.idx  main.cpp.AB80C8014B9CF517.idx  plugininterface.h.0407CD080064D021.idx  pluginloader.cpp.CF8DA934E811F2E0.idx  pluginloader.cpp.DB7C5C0EA73A4FCB.idx  pluginloader.h.BCF49AACD5141ACC.idx  pluginloader_p.cpp.5C6F9A18A1351753.idx  pluginloader_p.h.ADD6EC3C54F452A0.idx
.reuse/: dep5
archlinux/: PKGBUILD
common/: CMakeLists.txt  enumdbus.h  global.h  plugininterface.cpp  plugininterface_p.h  qgsettingsbackend.cpp  qgsettingsbackend.h  settings.cpp  settings.h  settingsbackend.h  utils.cpp  utils.h  weatherdata.cpp  weatherdata.h  weatherinterface.cpp  weatherinterface.h
configs/: com.deepin.dde.space.gschema.xml
daemon/: CMakeLists.txt  aspace.cpp  aspace.h  aspaceservice.xml  main.cpp  update-weather.timer.in  weather.cpp  weather.h  weather_p.h  weatherservice.cpp  weatherservice.h
debian/: README.Debian  aspace.substvars  changelog  control  copyright  files  postinst
debian/source/: format
frame/: aspace.cpp  aspace.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  pluginloader.cpp  pluginloader.h  pluginloader_p.h  res.qrc
frame/pages/: contentpage.cpp  contentpage.h  loadingpage.cpp  loadingpage.h  page.cpp  page.h  selectingpage.cpp  selectingpage.h
interfaces/: common_def.h  constants.h  frameproxyinterface.h  namespace.h  plugininterface.h
misc/: aspace.service.in  com.deepin.dde.space.gschema.xml  org.deepin.aspace.desktop  org.deepin.aspace.desktop.in  org.deepin.aspace.gschema.xml  org.deepin.aspace.gschema.xml.in  org.deepin.aspace.json  org.deepin.aspace.service.in  post_install.cmake.in  update-weather.timer.in
plugins/: CMakeLists.txt
plugins/echoeditor/: CMakeLists.txt  echoeditor.cpp  echoeditor.h  echoeditor_p.h
plugins/power/: CMakeLists.txt  powerplugin.cpp  powerplugin.h  powerplugin_p.h
plugins/weather/: CMakeLists.txt  res.qrc  weathercontroller.cpp  weathercontroller.h  weathermodel.cpp  weathermodel.h  weatherplugin.cpp  weatherplugin.h  weatherplugin_p.h
plugins/weather/assets/: res.qrc
plugins/weather/controllers/: listwidgetdelegate.cpp  listwidgetdelegate.h  weathercontroller.cpp  weathercontroller.h
plugins/weather/icons/: 1004.svg.license
plugins/weather/models/: currentweathermodel.cpp  currentweathermodel.h  futureweathermodel.cpp  futureweathermodel.h  locationmodel.cpp  locationmodel.h
plugins/weather/views/: currentweatherview.cpp  currentweatherview.h  listview.cpp  listview.h  listwidget.cpp  listwidget.h
server/: CMakeLists.txt  main.cpp  pluginloader.cpp  pluginloader.h  pluginloader_p.h
server/include/: pluginloader.h  pluginloader_p.h
server/src/: pluginloader.cpp  pluginloader_p.cpp
tests/: CMakeLists.txt  aspacetest.cpp  ddespacetest.cpp  main.cpp  stub.h
tests/common/: ut_utils.cpp  ut_weatherinterface.cpp
tests/daemon/: ut_aspace.cpp  ut_weatherservice.cpp
tests/frame/: qwidgetmock.cpp  qwidgetmock.h  ut-mainwindow.cpp  ut_contentpage.cpp  ut_mainwindow.cpp  ut_pluginloader.cpp  weathercontrollermock.cpp  weathercontrollermock.h
tests/stubs/: qwidgetmock.cpp  qwidgetmock.h  weathercontrollermock.cpp
tests/weather/: ut_views.cpp  ut_weathercontroller.cpp
tests/widgets/: ut_hoverbutton.cpp  ut_weathericon.cpp
widgets/: CMakeLists.txt  battery.cpp  battery.h  dynamicsun.cpp  dynamicsun.h  hoverbutton.cpp  hoverbutton.h  hoverbutton_p.h  loadingpage.cpp  loadingpage.h  locationmodel.cpp  locationmodel.h  locationselector.cpp  locationselector.h  res.qrc  updatebutton.cpp  utils.cpp  utils.h  weathericon.cpp  weathericon.h  weathericon_p.h
